refactor: Use Cost type for Itinerary#getGeneralizedCostIncludingPenalty, not int